реализация оформления заказа

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
-1. Прикрутить оформление заказа к фронту.
-2. Удалить лишние стили.
-3. Докрутить стили в корзине.
-4. Сделать удаление товара из корзины по минусу и по крестику.
-
-5. Model.ts, Search.ts
+- Считать суммы в корзине.
+- Убрать обязательный индекс.
+- Удалить лишние стили.
+- Докрутить стили в корзине.
+- Сделать удаление товара из корзины по минусу и по крестику.
+- Написать тесты на бэк.
+- Авторизация.
+- Регистрация.
+- Model.ts, Search.ts
