--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 - Считать суммы в корзине.
+- Отображать номер заказа и информацию о том что заказ оформлен.
 - Убрать обязательный индекс.
 - Удалить лишние стили.
 - Докрутить стили в корзине.
